# lx-music-song-scraper

./: .env  Cargo.toml  Cross.toml
.github/workflows/: build.yml
src/: config.rs  main.rs  song.rs  tx.rs
