[package]
name = "lx-music-song-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
dotenvy = { version = "0.15.7", features = ["clap"] }
reqwest = { version = "0.12.12" }
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
warp = "0.3.7"

[target.armv7-unknown-linux-gnueabi]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get install --assume-yes libssl-dev:$CROSS_DEB_ARCH"
]