[package]
name = "lx-music-song-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
ctrlc = "3.4.5"
dotenvy = { version = "0.15.7", features = ["clap"] }
reqwest = { version = "0.12.12" }
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["english", "signal"] }

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
