[package]
name = "lx-music-song-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
clap = { version = "4.5.27", features = ["derive"] }
ctrlc = "3.4.5"
dotenvy = { version = "0.15.7", features = ["clap"] }
id3 = { version = "1.16.1", features = ["tokio"] }
indicatif = "0.17.9"
reqwest = { version = "0.12.12" }
sanitise-file-name = "1.0.0"
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt-multi-thread"]}
tokio-cron-scheduler = { version = "0.14.0", features = ["english", "signal"] }

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3